--- a/.tmux.conf
+++ b/.tmux.conf
@@ -19,6 +19,12 @@ bind -n M-l select-pane -R
 bind -n M-k select-pane -U
 bind -n M-j select-pane -D
 
+# resize panes using C-hjkl
+bind-key -r -T prefix C-k resize-pane -U 10
+bind-key -r -T prefix C-j resize-pane -D 10
+bind-key -r -T prefix C-h resize-pane -L 10
+bind-key -r -T prefix C-l resize-pane -R 10
+
 # split panes using | and -, preserve path
 bind | split-window -h -c "#{pane_current_path}"
 bind - split-window -v -c "#{pane_current_path}"
@@ -43,9 +49,16 @@ setw -g pane-base-index 1
 # Renumber windows when one is removed
 set -g renumber-windows on
 
+# Enable mouse mode/scrolling
+set -g mouse on
+set -ga terminal-overrides ',*256color*:smcup@:rmcup@'
+
 # Theme status bar
 set-option -g status-style bg=default
 set-window-option -g window-status-current-style bg=#d42e26
 set-option -g status-left-length 80
 set-option -g status-left " #{session_name} | "
 set-option -g status-right " %H:%M %d-%b-%y "
+
+# Run extensions
+run-shell ~/.config/tmux/sessionist/sessionist.tmux
