Update hyprland config

--- a/.config/hypr/keybinds.conf
+++ b/.config/hypr/keybinds.conf
@@ -8,23 +8,37 @@ bind = SUPER SHIFT, Return, exec, wofi --show drun
 bind = SUPER SHIFT, Escape, exit
 bind = SUPER, Escape, exec, wlogout
 
+# Tiling
+bind = SUPER, V, togglefloating,
+
 # Window
 bind = SUPER, Q, killactive
 bind = SUPER, F, fullscreen, 0
 bind = SUPER, M, fullscreen, 1
 
-# Tiling
-bind = SUPER, V, togglefloating,
-bind = SUPER, P, pseudo, # dwindle
-bind = SUPER, J, togglesplit, # dwindle
+# Move window
+bind = SUPER SHIFT, h, movewindow, l
+bind = SUPER SHIFT, l, movewindow, r
+bind = SUPER SHIFT, k, movewindow, u
+bind = SUPER SHIFT, j, movewindow, d
 
-# Move focus with MAIN_MOD + arrow keys
+# Move window/focus to next monitor
+bind = SUPER, o, focusmonitor, +1
+bind = SUPER SHIFT, o, movewindow, mon:+1
+
+# Move window focus
 bind = SUPER, h, movefocus, l
 bind = SUPER, l, movefocus, r
 bind = SUPER, k, movefocus, u
 bind = SUPER, j, movefocus, d
 
-# Switch workspaces with MAIN_MOD + [0-9]
+# Resize active window
+bind = SUPER CTRL, h, resizeactive, -64 0
+bind = SUPER CTRL, l, resizeactive,  64 0
+bind = SUPER CTRL, k, resizeactive,  0 -64
+bind = SUPER CTRL, j, resizeactive,  0 64
+
+# Switch workspaces
 bind = SUPER, 1, workspace, 1
 bind = SUPER, 2, workspace, 2
 bind = SUPER, 3, workspace, 3
@@ -36,7 +50,7 @@ bind = SUPER, 8, workspace, 8
 bind = SUPER, 9, workspace, 9
 bind = SUPER, 0, workspace, 10
 
-# Move active window to a workspace with MAIN_MOD + SHIFT + [0-9]
+# Move active window to a workspace
 bind = SUPER SHIFT, 1, movetoworkspace, 1
 bind = SUPER SHIFT, 2, movetoworkspace, 2
 bind = SUPER SHIFT, 3, movetoworkspace, 3
@@ -48,11 +62,16 @@ bind = SUPER SHIFT, 8, movetoworkspace, 8
 bind = SUPER SHIFT, 9, movetoworkspace, 9
 bind = SUPER SHIFT, 0, movetoworkspace, 10
 
-# Scroll through existing workspaces with MAIN_MOD + scroll
+# Special workspace
+bind = SUPER SHIFT, s, movetoworkspace, special
+bind = SUPER, S, togglespecialworkspace
+bind = , Menu, togglespecialworkspace
+
+# Scroll through existing workspaces using mouse
 bind = SUPER, mouse_down, workspace, e+1
 bind = SUPER, mouse_up, workspace, e-1
 
-# Move/resize windows with MAIN_MOD + LMB/RMB and dragging
+# Move/resize windows using mouse
 bindm = SUPER, mouse:272, movewindow
 bindm = SUPER, mouse:273, resizewindow
 
