--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -2,12 +2,9 @@
 monitor=,highres,auto,1
 
 # Startup programs
-exec = export XDG_CURRENT_DESKTOP=Hyprland
-exec-once systemctl --user import-environment XDG_SESSION_TYPE XDG_CURRENT_DESKTOP
-exec-once dbus-update-activation-environment WAYLAND_DISPLAY
+exec-once = dbus-update-activation-environment --systemd WAYLAND_DISPLAY XDG_CURRENT_DESKTOP
 exec-once = waybar
 exec-once = hyprpaper
-# exec-once=dbus-update-activation-environment --systemd WAYLAND_DISPLAY XDG_CURRENT_DESKTOP
 
 # Input settings
 input {
