Update hyprland config

--- a/.config/hypr/appearance.conf
+++ b/.config/hypr/appearance.conf
@@ -12,6 +12,7 @@ general {
     col.inactive_border = $GRAY
 
     layout = master
+    no_border_on_floating = true
 }
 
 decoration {
@@ -19,9 +20,9 @@ decoration {
     blur = yes
     blur_size = 3
     blur_passes = 1
-    blur_new_optimizations = on
+    blur_new_optimizations = true
 
-    drop_shadow = yes
+    drop_shadow = no
     shadow_range = 4
     shadow_render_power = 3
     col.shadow = $SHADOW
