--- a/.config/hypr/keybinds.conf
+++ b/.config/hypr/keybinds.conf
@@ -1,12 +1,21 @@
 # Launch programs
-bind = SUPER, T, exec, alacritty
-bind = SUPER, E, exec, alacritty -e lf
-bind = SUPER, B, exec, firefox
-bind = SUPER SHIFT, Return, exec, wofi --show drun
+$TERM = alacritty
+$LAUNCHER = rofi -show combi -modi p:"~/.config/rofi/powermenu/rofi-power-menu --confirm=''" -combi-modes "drun,p"
+$FILE_EXPLORER = env EDITOR=nvim alacritty -e lf
+$BROWSER = firefox
+$SCREENSHOT = slurp | grim -g - $HOME/Pictures/Screenshots/$(date +'screenshot_%Y-%m-%d-%H%M%S.png')
+
+bind = SUPER, T, exec, $TERM
+bind = SUPER, E, exec, $FILE_EXPLORER
+bind = SUPER, B, exec, $BROWSER
+bind = SUPER SHIFT, Return, exec, $LAUNCHER
+bind = SUPER, Print, exec, $SCREENSHOT
 
 # Exit hyprland
 bind = SUPER SHIFT, Escape, exit
-bind = SUPER, Escape, exec, wlogout
+
+# Tiling
+bind = SUPER, V, togglefloating,
 
 # Tiling
 bind = SUPER, V, togglefloating,
@@ -38,29 +47,54 @@ bind = SUPER CTRL, l, resizeactive,  64 0
 bind = SUPER CTRL, k, resizeactive,  0 -64
 bind = SUPER CTRL, j, resizeactive,  0 64
 
-# Switch workspaces
-bind = SUPER, 1, workspace, 1
-bind = SUPER, 2, workspace, 2
-bind = SUPER, 3, workspace, 3
-bind = SUPER, 4, workspace, 4
-bind = SUPER, 5, workspace, 5
-bind = SUPER, 6, workspace, 6
-bind = SUPER, 7, workspace, 7
-bind = SUPER, 8, workspace, 8
-bind = SUPER, 9, workspace, 9
-bind = SUPER, 0, workspace, 10
+# Switch workspaces using hyprsome
+$HYPRSOME = ~/.cargo/bin/hyprsome
+bind = SUPER, 1, exec, $HYPRSOME workspace 1
+bind = SUPER, 2, exec, $HYPRSOME workspace 2
+bind = SUPER, 3, exec, $HYPRSOME workspace 3
+bind = SUPER, 4, exec, $HYPRSOME workspace 4
+bind = SUPER, 5, exec, $HYPRSOME workspace 5
+bind = SUPER, 6, exec, $HYPRSOME workspace 6
+bind = SUPER, 7, exec, $HYPRSOME workspace 7
+bind = SUPER, 8, exec, $HYPRSOME workspace 8
+bind = SUPER, 9, exec, $HYPRSOME workspace 9
 
-# Move active window to a workspace
-bind = SUPER SHIFT, 1, movetoworkspace, 1
-bind = SUPER SHIFT, 2, movetoworkspace, 2
-bind = SUPER SHIFT, 3, movetoworkspace, 3
-bind = SUPER SHIFT, 4, movetoworkspace, 4
-bind = SUPER SHIFT, 5, movetoworkspace, 5
-bind = SUPER SHIFT, 6, movetoworkspace, 6
-bind = SUPER SHIFT, 7, movetoworkspace, 7
-bind = SUPER SHIFT, 8, movetoworkspace, 8
-bind = SUPER SHIFT, 9, movetoworkspace, 9
-bind = SUPER SHIFT, 0, movetoworkspace, 10
+bind = , Menu, exec, $HYPRSOME workspace 1
+
+# Switch workspaces using standard hyprland
+# bind = SUPER, 1, workspace, 1
+# bind = SUPER, 2, workspace, 2
+# bind = SUPER, 3, workspace, 3
+# bind = SUPER, 4, workspace, 4
+# bind = SUPER, 5, workspace, 5
+# bind = SUPER, 6, workspace, 6
+# bind = SUPER, 7, workspace, 7
+# bind = SUPER, 8, workspace, 8
+# bind = SUPER, 9, workspace, 9
+# bind = SUPER, 0, workspace, 10
+
+# Move active window to a workspace using hyprsome
+bind = SUPER SHIFT, 1, exec, $HYPRSOME move 1
+bind = SUPER SHIFT, 2, exec, $HYPRSOME move 2
+bind = SUPER SHIFT, 3, exec, $HYPRSOME move 3
+bind = SUPER SHIFT, 4, exec, $HYPRSOME move 4
+bind = SUPER SHIFT, 5, exec, $HYPRSOME move 5
+bind = SUPER SHIFT, 6, exec, $HYPRSOME move 6
+bind = SUPER SHIFT, 7, exec, $HYPRSOME move 7
+bind = SUPER SHIFT, 8, exec, $HYPRSOME move 8
+bind = SUPER SHIFT, 9, exec, $HYPRSOME move 9
+
+# Move active window to a workspace using standard hyprland
+# bind = SUPER SHIFT, 1, movetoworkspace, 1
+# bind = SUPER SHIFT, 2, movetoworkspace, 2
+# bind = SUPER SHIFT, 3, movetoworkspace, 3
+# bind = SUPER SHIFT, 4, movetoworkspace, 4
+# bind = SUPER SHIFT, 5, movetoworkspace, 5
+# bind = SUPER SHIFT, 6, movetoworkspace, 6
+# bind = SUPER SHIFT, 7, movetoworkspace, 7
+# bind = SUPER SHIFT, 8, movetoworkspace, 8
+# bind = SUPER SHIFT, 9, movetoworkspace, 9
+# bind = SUPER SHIFT, 0, movetoworkspace, 10
 
 # Special workspace
 bind = SUPER SHIFT, s, movetoworkspace, special
