--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -1,6 +1,3 @@
-# Monitor config
-monitor=,highres,auto,1
-
 # Startup programs
 exec-once = dbus-update-activation-environment --systemd WAYLAND_DISPLAY XDG_CURRENT_DESKTOP
 exec-once = waybar
@@ -18,6 +15,7 @@ input {
     }
 
     sensitivity = 0
+    force_no_accel = true
 }
 
 # Layout settings
@@ -26,5 +24,6 @@ master {
 }
 
 # Source other files
+source=~/.config/hypr/monitors.conf
 source=~/.config/hypr/keybinds.conf
 source=~/.config/hypr/appearance.conf
