--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -1,5 +1,6 @@
 # Startup programs
 exec-once = dbus-update-activation-environment --systemd WAYLAND_DISPLAY XDG_CURRENT_DESKTOP
+exec-once = /usr/lib/polkit-kde-authentication-agent-1
 exec-once = waybar
 exec-once = hyprpaper
 
@@ -22,6 +23,8 @@ input {
 master {
     new_is_master = false
 }
+
+windowrule = float,^(org.kde.polkit-kde-authentication-agent-1)$
 
 # Source other files
 source=~/.config/hypr/monitors.conf
