Update hyprland config

--- a/.config/hypr/hyprpaper.conf
+++ b/.config/hypr/hyprpaper.conf
@@ -2,4 +2,4 @@ preload = ~/Pictures/wallpapers/wallpaper1.png
 preload = ~/Pictures/wallpapers/wallpaper2.png
 
 wallpaper = HDMI-A-3, ~/Pictures/wallpapers/wallpaper1.png
-wallpaper = HDMI-A-2, ~/Pictures/wallpapers/wallpaper2.png
+wallpaper = DP-2, ~/Pictures/wallpapers/wallpaper2.png
