--- a/.config/hypr/monitors.conf
+++ b/.config/hypr/monitors.conf
@@ -1,30 +1,35 @@
 # Monitor names
 $MONITOR_1 = HDMI-A-3
-$MONITOR_2 = HDMI-A-2
+$MONITOR_2 = DP-2
 
 # Monitor layout
-monitor = $MONITOR_1, 1920x1080, 0x0, 1
-monitor = $MONITOR_2, 1920x1080, 1920x0, 1
+monitor = $MONITOR_1, preferred, 0x0, 1
+monitor = $MONITOR_2, preferred, 1920x0, 1
+
+# monitor = $MONITOR_1, highrr, 0x0, 1
+# monitor = $MONITOR_2, preferred, 1440x0, 1
+
+monitor = , preferred, auto, 1
 
 # Workspace layout
-workspace = $MONITOR_1, 1
-wsbind = 1, $MONITOR_1
-wsbind = 2, $MONITOR_1
-wsbind = 3, $MONITOR_1
-wsbind = 4, $MONITOR_1
-wsbind = 5, $MONITOR_1
-wsbind = 6, $MONITOR_1
-wsbind = 7, $MONITOR_1
-wsbind = 8, $MONITOR_1
-wsbind = 9, $MONITOR_1
+workspace = 1, monitor:$MONITOR_1, default:true
+workspace = 2, monitor:$MONITOR_1
+workspace = 3, monitor:$MONITOR_1
+workspace = 4, monitor:$MONITOR_1
+workspace = 4, monitor:$MONITOR_1
+workspace = 5, monitor:$MONITOR_1
+workspace = 6, monitor:$MONITOR_1
+workspace = 7, monitor:$MONITOR_1
+workspace = 8, monitor:$MONITOR_1
+workspace = 9, monitor:$MONITOR_1
 
-workspace = $MONITOR_2, 11
-wsbind = 11, $MONITOR_2
-wsbind = 12, $MONITOR_2
-wsbind = 13, $MONITOR_2
-wsbind = 14, $MONITOR_2
-wsbind = 15, $MONITOR_2
-wsbind = 16, $MONITOR_2
-wsbind = 17, $MONITOR_2
-wsbind = 18, $MONITOR_2
-wsbind = 19, $MONITOR_2
+workspace = 11, monitor:$MONITOR_2, default:true
+workspace = 12, monitor:$MONITOR_2
+workspace = 13, monitor:$MONITOR_2
+workspace = 14, monitor:$MONITOR_2
+workspace = 14, monitor:$MONITOR_2
+workspace = 15, monitor:$MONITOR_2
+workspace = 16, monitor:$MONITOR_2
+workspace = 17, monitor:$MONITOR_2
+workspace = 18, monitor:$MONITOR_2
+workspace = 19, monitor:$MONITOR_2
