Update Hyprland config

--- a/.config/hypr/keybinds.conf
+++ b/.config/hypr/keybinds.conf
@@ -1,7 +1,7 @@
 # Launch programs
 $TERM = alacritty
 $LAUNCHER = rofi -show combi -modi p:"~/.config/rofi/powermenu/rofi-power-menu --confirm=''" -combi-modes "drun,p"
-$FILE_EXPLORER = env EDITOR=nvim alacritty -e lf
+$FILE_EXPLORER = env EDITOR=nvim alacritty --title lf --command lf
 $BROWSER = firefox
 $SCREENSHOT = slurp | grim -g - $HOME/Pictures/Screenshots/$(date +'screenshot_%Y-%m-%d-%H%M%S.png')
 
@@ -138,6 +138,11 @@ bindm = SUPER, mouse:273, resizewindow
 bind = , XF86AudioLowerVolume, exec, pactl set-sink-volume @DEFAULT_SINK@ -5%
 bind = , XF86AudioRaiseVolume, exec, pactl set-sink-volume @DEFAULT_SINK@ +5%
 bind = , XF86AudioMute, exec, pactl set-sink-mute @DEFAULT_SINK@ toggle
+bind = , XF86AudioMicMute, exec, pactl set-source-mute @DEFAULT_SOURCE@ toggle
+
+# Brightness controls
+bind = , XF86MonBrightnessUp, exec, brightnessctl -e -q s 10%+
+bind = , XF86MonBrightnessDown, exec, brightnessctl -e -q s 10%-
 
 # Media controls
 bind = , XF86AudioPause, exec, playerctl play-pause
