Update alacritty, hypr, nvim, rofi, waybar, mimeapps, local/share/applications config

--- a/.config/waybar/config
+++ b/.config/waybar/config
@@ -61,10 +61,10 @@
             "warning": 30,
             "critical": 15
         },
-        "format": "{capacity}% {icon}",
-        "format-charging": "{capacity}% ",
-        "format-plugged": "{capacity}% ",
-        "format-alt": "{time} {icon}",
+        "format": "{capacity}% {icon} ",
+        "format-charging": "{capacity}%  ",
+        "format-plugged": "{capacity}%  ",
+        "format-alt": "{time} {icon} ",
         "format-icons": ["", "", "", "", ""]
     },
     "network": {
