--- a/.config/alacritty/alacritty.yml
+++ b/.config/alacritty/alacritty.yml
@@ -6,19 +6,19 @@ window:
 
 font:
   normal:
-    family: "Hack Nerd Font"
+    family: "Hack Nerd Font Mono"
     style: Regular
   bold:
-    family: "Hack Nerd Font"
+    family: "Hack Nerd Font Mono"
     style: Bold
   italic:
-    family: "Hack Nerd Font"
+    family: "Hack Nerd Font Mono"
     style: Italic
   bold_italic:
-    family: "Hack Nerd Font"
+    family: "Hack Nerd Font Mono"
     style: Bold Italic
 
-  size: 9.0
+  size: 10.0
 
 scrolling:
   history: 10000
