--- a/.config/tmux/tmux.conf
+++ b/.config/tmux/tmux.conf
@@ -1,4 +1,4 @@
-# remap prefix from 'C-b' to 'C-a'
+# Remap prefix from 'C-b' to 'C-a'
 unbind C-b
 set-option -g prefix C-a
 bind-key C-a send-prefix
@@ -7,29 +7,36 @@ bind-key C-a send-prefix
 unbind a
 bind a last-window
 
-# switch panes using hjkl
+# Switch panes using hjkl
 bind l select-pane -L
 bind h select-pane -R
 bind k select-pane -U
 bind j select-pane -D
 
-# switch panes using Alt-hjkl without prefix
+# Switch panes using Alt-hjkl without prefix
 bind -n M-h select-pane -L
 bind -n M-l select-pane -R
 bind -n M-k select-pane -U
 bind -n M-j select-pane -D
 
-# resize panes using C-hjkl
+# Resize panes using C-hjkl
 bind-key -r -T prefix C-k resize-pane -U 10
 bind-key -r -T prefix C-j resize-pane -D 10
 bind-key -r -T prefix C-h resize-pane -L 10
 bind-key -r -T prefix C-l resize-pane -R 10
+
+# Enter 'normal' mode
+bind-key Escape copy-mode
 
 # split panes using | and -, preserve path
 bind | split-window -h -c "#{pane_current_path}"
 bind - split-window -v -c "#{pane_current_path}"
 unbind '"'
 unbind %
+
+# Allow switching next/prev window while holding ctrl
+bind C-p previous-window
+bind C-n next-window
 
 # Preserve path when creating new windows
 unbind c
@@ -38,9 +45,12 @@ bind c new-window -c "#{pane_current_path}"
 # Remove delay time for pressing the escape key
 set -sg escape-time 0
 
+# Set vi keybinds
 setw -g mode-keys vi
-#set -g mouse on
-set-option -g history-limit 2000
+setw -g status-keys vi
+bind-key -T copy-mode-vi v send -X begin-selection
+bind-key -T copy-mode-vi y send -X copy-pipe-and-cancel "reattach-to-user-namespace pbcopy"
+unbind -T copy-mode-vi Enter
 
 # One indexed windows and panes
 set -g base-index 1
@@ -53,12 +63,15 @@ set -g renumber-windows on
 set -g mouse on
 set -ga terminal-overrides ',*256color*:smcup@:rmcup@'
 
+# Increase scrollback buffer size from 2000 to 50000 lines
+set -g history-limit 50000
+
+# Refresh status every 5 seconds
+set -g status-interval 5
+
 # Theme status bar
 set-option -g status-style bg=default
 set-window-option -g window-status-current-style bg=#d42e26
 set-option -g status-left-length 80
 set-option -g status-left " #{session_name} | "
 set-option -g status-right " %H:%M %d-%b-%y "
-
-# Run extensions
-run-shell ~/.config/tmux/sessionist/sessionist.tmux
