--- a/.config/hypr/hyprpaper.conf
+++ b/.config/hypr/hyprpaper.conf
@@ -1,5 +1,5 @@
-preload = ~/Images/wallpapers/wallpaper1.png
-preload = ~/Images/wallpapers/wallpaper2.png
+preload = ~/Images/wallpapers/wallpaper1.jpg
+preload = ~/Images/wallpapers/wallpaper2.jpg
 
-wallpaper = HDMI-A-3, ~/Images/wallpapers/wallpaper1.png
-wallpaper = DP-2, ~/Images/wallpapers/wallpaper2.png
+wallpaper = HDMI-A-3, ~/Images/wallpapers/wallpaper1.jpg
+wallpaper = DP-2, ~/Images/wallpapers/wallpaper2.jpg
