--- a/.config/hypr/keybinds.conf
+++ b/.config/hypr/keybinds.conf
@@ -22,6 +22,7 @@ bind = SUPER, V, togglefloating,
 bind = SUPER, Q, killactive
 bind = SUPER, F, fullscreen, 0
 bind = SUPER, M, fullscreen, 1
+bind = SUPER CTRL, F, fakefullscreen
 
 # Move window
 bind = SUPER SHIFT, h, movewindow, l
@@ -48,78 +49,29 @@ bind = SUPER CTRL, l, resizeactive,  64 0
 bind = SUPER CTRL, k, resizeactive,  0 -64
 bind = SUPER CTRL, j, resizeactive,  0 64
 
-# Switch workspaces using hyprland-workspaces
-$HYPRLAND_WORKSPACES = ~/bin/hyprland-workspaces
-bind = SUPER, 1, exec, $HYPRLAND_WORKSPACES workspace 1
-bind = SUPER, 2, exec, $HYPRLAND_WORKSPACES workspace 2
-bind = SUPER, 3, exec, $HYPRLAND_WORKSPACES workspace 3
-bind = SUPER, 4, exec, $HYPRLAND_WORKSPACES workspace 4
-bind = SUPER, 5, exec, $HYPRLAND_WORKSPACES workspace 5
-bind = SUPER, 6, exec, $HYPRLAND_WORKSPACES workspace 6
-bind = SUPER, 7, exec, $HYPRLAND_WORKSPACES workspace 7
-bind = SUPER, 8, exec, $HYPRLAND_WORKSPACES workspace 8
-bind = SUPER, 9, exec, $HYPRLAND_WORKSPACES workspace 9
+# Switch workspaces
+bind = SUPER, 1, workspace, 1
+bind = SUPER, 2, workspace, 2
+bind = SUPER, 3, workspace, 3
+bind = SUPER, 4, workspace, 4
+bind = SUPER, 5, workspace, 5
+bind = SUPER, 6, workspace, 6
+bind = SUPER, 7, workspace, 7
+bind = SUPER, 8, workspace, 8
+bind = SUPER, 9, workspace, 9
+bind = SUPER, 0, workspace, 10
 
-bind = , Menu, exec, $HYPRLAND_WORKSPACES workspace 1
-
-# # Switch workspaces using standard hyprland
-# bind = SUPER, 1, moveworkspacetomonitor, 1 current
-# bind = SUPER, 1, workspace, 1
-# bind = SUPER, 2, moveworkspacetomonitor, 2 current
-# bind = SUPER, 2, workspace, 2
-# bind = SUPER, 3, moveworkspacetomonitor, 3 current
-# bind = SUPER, 3, workspace, 3
-# bind = SUPER, 4, moveworkspacetomonitor, 4 current
-# bind = SUPER, 4, workspace, 4
-# bind = SUPER, 5, moveworkspacetomonitor, 5 current
-# bind = SUPER, 5, workspace, 5
-# bind = SUPER, 6, moveworkspacetomonitor, 6 current
-# bind = SUPER, 6, workspace, 6
-# bind = SUPER, 7, moveworkspacetomonitor, 7 current
-# bind = SUPER, 7, workspace, 7
-# bind = SUPER, 8, moveworkspacetomonitor, 8 current
-# bind = SUPER, 8, workspace, 8
-# bind = SUPER, 9, moveworkspacetomonitor, 9 current
-# bind = SUPER, 9, workspace, 9
-# bind = SUPER, 0, moveworkspacetomonitor, 10 current
-# bind = SUPER, 0, workspace, 10
-
-
-# # Switch workspaces using workspacescript
-# bind = SUPER, 1, exec, ~/.config/hypr/workspacescript 1
-# bind = SUPER, 2, exec, ~/.config/hypr/workspacescript 2
-# bind = SUPER, 3, exec, ~/.config/hypr/workspacescript 3
-# bind = SUPER, 4, exec, ~/.config/hypr/workspacescript 4
-# bind = SUPER, 5, exec, ~/.config/hypr/workspacescript 5
-# bind = SUPER, 6, exec, ~/.config/hypr/workspacescript 6
-# bind = SUPER, 7, exec, ~/.config/hypr/workspacescript 7
-# bind = SUPER, 8, exec, ~/.config/hypr/workspacescript 8
-# bind = SUPER, 9, exec, ~/.config/hypr/workspacescript 9
-# bind = SUPER, 0, exec, ~/.config/hypr/workspacescript 10
-# bind = , Menu, exec, ~/.config/hypr/workspacescript 1
-
-# Move active window to a workspace using hyprland-workspaces
-bind = SUPER SHIFT, 1, exec, $HYPRLAND_WORKSPACES movetoworkspacesilent 1
-bind = SUPER SHIFT, 2, exec, $HYPRLAND_WORKSPACES movetoworkspacesilent 2
-bind = SUPER SHIFT, 3, exec, $HYPRLAND_WORKSPACES movetoworkspacesilent 3
-bind = SUPER SHIFT, 4, exec, $HYPRLAND_WORKSPACES movetoworkspacesilent 4
-bind = SUPER SHIFT, 5, exec, $HYPRLAND_WORKSPACES movetoworkspacesilent 5
-bind = SUPER SHIFT, 6, exec, $HYPRLAND_WORKSPACES movetoworkspacesilent 6
-bind = SUPER SHIFT, 7, exec, $HYPRLAND_WORKSPACES movetoworkspacesilent 7
-bind = SUPER SHIFT, 8, exec, $HYPRLAND_WORKSPACES movetoworkspacesilent 8
-bind = SUPER SHIFT, 9, exec, $HYPRLAND_WORKSPACES movetoworkspacesilent 9
-
-# # Move active window to a workspace using standard hyprland
-# bind = SUPER SHIFT, 1, movetoworkspace, 1
-# bind = SUPER SHIFT, 2, movetoworkspace, 2
-# bind = SUPER SHIFT, 3, movetoworkspace, 3
-# bind = SUPER SHIFT, 4, movetoworkspace, 4
-# bind = SUPER SHIFT, 5, movetoworkspace, 5
-# bind = SUPER SHIFT, 6, movetoworkspace, 6
-# bind = SUPER SHIFT, 7, movetoworkspace, 7
-# bind = SUPER SHIFT, 8, movetoworkspace, 8
-# bind = SUPER SHIFT, 9, movetoworkspace, 9
-# bind = SUPER SHIFT, 0, movetoworkspace, 10
+# Move active window to a workspace
+bind = SUPER SHIFT, 1, movetoworkspace, 1
+bind = SUPER SHIFT, 2, movetoworkspace, 2
+bind = SUPER SHIFT, 3, movetoworkspace, 3
+bind = SUPER SHIFT, 4, movetoworkspace, 4
+bind = SUPER SHIFT, 5, movetoworkspace, 5
+bind = SUPER SHIFT, 6, movetoworkspace, 6
+bind = SUPER SHIFT, 7, movetoworkspace, 7
+bind = SUPER SHIFT, 8, movetoworkspace, 8
+bind = SUPER SHIFT, 9, movetoworkspace, 9
+bind = SUPER SHIFT, 0, movetoworkspace, 10
 
 # Special workspace
 bind = SUPER SHIFT, s, movetoworkspace, special
