Remove hyprpaper splash text that they added for some reason (who asked for this?)

--- a/.config/hypr/hyprpaper.conf
+++ b/.config/hypr/hyprpaper.conf
@@ -3,3 +3,5 @@ preload = ~/Images/wallpapers/wallpaper2.jpg
 
 wallpaper = HDMI-A-3, ~/Images/wallpapers/wallpaper1.jpg
 wallpaper = DP-2, ~/Images/wallpapers/wallpaper2.jpg
+
+splash = false
