--- a/.config/hypr/appearance.conf
+++ b/.config/hypr/appearance.conf
@@ -1,3 +1,6 @@
+# Set background
+exec-once = swaybg -i ~/Images/Wallpapers/wallpaper1
+
 # Colors
 $RED      = rgba(FF3333EE)
 $RED_DARK = rgba(960000EE)
