--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -2,8 +2,7 @@
 exec-once = dbus-update-activation-environment --systemd WAYLAND_DISPLAY XDG_CURRENT_DESKTOP
 exec-once = /usr/lib/polkit-kde-authentication-agent-1
 exec-once = waybar
-exec-once = hyprpaper
-exec-once = dunst
+exec-once = swayidle -w lock 'swaylock' before-sleep 'swaylock' timeout 300 'swaylock'
 
 # Input settings
 input {
@@ -18,6 +17,8 @@ input {
 
     sensitivity = 0
     force_no_accel = true
+    repeat_delay = 240
+    repeat_rate = 45
 }
 
 # Layout settings
