--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -2,6 +2,8 @@
 exec-once = dbus-update-activation-environment --systemd WAYLAND_DISPLAY XDG_CURRENT_DESKTOP
 exec-once = /usr/lib/polkit-kde-authentication-agent-1
 exec-once = waybar
+exec-once = hyprpaper
+exec-once = dunst
 exec-once = swayidle -w lock 'swaylock' before-sleep 'swaylock' timeout 300 'swaylock'
 
 # Input settings
@@ -27,6 +29,8 @@ master {
 }
 
 windowrule = float,^(org.kde.polkit-kde-authentication-agent-1)$
+windowrulev2 = stayfocused, title:^()$,class:^(steam)$
+windowrulev2 = minsize 1 1, title:^()$,class:^(steam)$
 
 # Source other files
 source=~/.config/hypr/monitors.conf
