--- a/.local/share/applications/betaflight-configurator.desktop
+++ b/.local/share/applications/betaflight-configurator.desktop
@@ -2,7 +2,7 @@
 Name=Betaflight Configurator
 Comment=Crossplatform configuration tool for the Betaflight flight control system
 Exec=/home/edvin/Downloads/Betaflight\ Configurator/betaflight-configurator
-Icon=/home/edvin/Downloads/Betaflight\ Configurator/icon/bf_icon_128.png
+Icon=betaflight
 Terminal=false
 Type=Application
 Categories=Utility
