Update hyprland config

--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -4,11 +4,11 @@ exec-once = /usr/lib/polkit-kde-authentication-agent-1
 exec-once = waybar
 exec-once = hyprpaper
 exec-once = dunst
-exec-once = swayidle -w lock 'swaylock' before-sleep 'swaylock' timeout 300 'swaylock'
+exec-once = swayidle lock 'swaylock' before-sleep 'swaylock' timeout 600 'swaylock'
 
 # Input settings
 input {
-    kb_layout = se
+    kb_layout = us
     kb_options = caps:escape # Map capslock to escape
 
     follow_mouse = 1
