--- a/.config/hypr/keybinds.conf
+++ b/.config/hypr/keybinds.conf
@@ -8,9 +8,9 @@ $SCREENSHOT = slurp | grim -g - $HOME/Pictures/Screenshots/$(date +'screenshot_%
 bind = SUPER, T, exec, $TERM
 bind = SUPER, E, exec, $FILE_EXPLORER
 bind = SUPER, B, exec, $BROWSER
-bind = SUPER SHIFT, Return, exec, $LAUNCHER
+bind = SUPER, RETURN, exec, $LAUNCHER
 bind = SUPER SHIFT, Tab, exec, rofi -show window
-bind = SUPER, Print, exec, $SCREENSHOT
+bind = , Print, exec, $SCREENSHOT
 
 # Exit hyprland
 bind = SUPER SHIFT, Escape, exit
@@ -19,7 +19,7 @@ bind = SUPER SHIFT, Escape, exit
 bind = SUPER, V, togglefloating,
 
 # Window
-bind = SUPER, Q, killactive
+bind = SUPER, C, killactive
 bind = SUPER, F, fullscreen, 0
 bind = SUPER, M, fullscreen, 1
 bind = SUPER CTRL, F, fakefullscreen
