--- a/.config/hypr/monitors.conf
+++ b/.config/hypr/monitors.conf
@@ -1,6 +1,6 @@
 # Monitor names
 $MONITOR_1 = HDMI-A-3
-$MONITOR_2 = DP-2
+$MONITOR_2 = DP-1
 
 # Monitor layout
 monitor = $MONITOR_1, preferred, 0x0, 1
@@ -10,3 +10,9 @@ monitor = , preferred, auto, 1
 
 # Workspace layout
 workspace = 1, monitor:$MONITOR_1, default:true
+workspace = 2, monitor:$MONITOR_1
+workspace = 3, monitor:$MONITOR_1
+
+workspace = 4, monitor:$MONITOR_2, default:true
+workspace = 5, monitor:$MONITOR_2
+workspace = 6, monitor:$MONITOR_2
