Add hypridle and hyprlock config

--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -4,7 +4,7 @@ exec-once = /usr/lib/polkit-kde-authentication-agent-1
 exec-once = waybar
 exec-once = hyprpaper
 exec-once = dunst
-exec-once = swayidle lock 'swaylock' before-sleep 'swaylock' timeout 600 'swaylock'
+exec-once = hypridle
 
 # Input settings
 input {
