Update hyprland keyboard config

--- a/hyprland/.config/hypr/hyprland.conf
+++ b/hyprland/.config/hypr/hyprland.conf
@@ -9,6 +9,7 @@ exec-once = hypridle
 # Input settings
 input {
     kb_layout = us
+    kb_variant = altgr-intl
     kb_options = caps:escape # Map capslock to escape
 
     follow_mouse = 1
