--- a/hyprland/.config/hypr/keybinds.conf
+++ b/hyprland/.config/hypr/keybinds.conf
@@ -8,8 +8,8 @@ $SCREENSHOT = slurp | grim -g - $HOME/Pictures/Screenshots/$(date +'screenshot_%
 bind = SUPER, T, exec, $TERM
 bind = SUPER, E, exec, $FILE_EXPLORER
 bind = SUPER, B, exec, $BROWSER
-bind = SUPER, RETURN, exec, $LAUNCHER
-bind = SUPER SHIFT, Tab, exec, rofi -show window
+bind = SUPER, SPACE, exec, $LAUNCHER
+bind = SUPER CTRL, Tab, exec, rofi -show window
 bind = , Print, exec, $SCREENSHOT
 
 # Exit hyprland
@@ -22,17 +22,17 @@ bind = SUPER, V, togglefloating,
 bind = SUPER, C, killactive
 bind = SUPER, F, fullscreen, 0
 bind = SUPER, M, fullscreen, 1
-bind = SUPER CTRL, F, fakefullscreen
+bind = SUPER SHIFT, F, fakefullscreen
 
 # Move window
-bind = SUPER SHIFT, h, movewindow, l
-bind = SUPER SHIFT, l, movewindow, r
-bind = SUPER SHIFT, k, movewindow, u
-bind = SUPER SHIFT, j, movewindow, d
+bind = SUPER CTRL, h, movewindow, l
+bind = SUPER CTRL, l, movewindow, r
+bind = SUPER CTRL, k, movewindow, u
+bind = SUPER CTRL, j, movewindow, d
 
 # Move window/focus to next monitor
 bind = SUPER, o, focusmonitor, +1
-bind = SUPER SHIFT, o, movewindow, mon:+1
+bind = SUPER CTRL, o, movewindow, mon:+1
 
 # Move window focus
 bind = SUPER, h, movefocus, l
@@ -44,10 +44,10 @@ bind = SUPER, plus, cyclenext
 bind = SUPER, minus, cyclenext, prev
 
 # Resize active window
-bind = SUPER CTRL, h, resizeactive, -64 0
-bind = SUPER CTRL, l, resizeactive,  64 0
-bind = SUPER CTRL, k, resizeactive,  0 -64
-bind = SUPER CTRL, j, resizeactive,  0 64
+bind = SUPER SHIFT, h, resizeactive, -64 0
+bind = SUPER SHIFT, l, resizeactive,  64 0
+bind = SUPER SHIFT, k, resizeactive,  0 -64
+bind = SUPER SHIFT, j, resizeactive,  0 64
 
 # Switch workspaces
 bind = SUPER, 1, workspace, 1
@@ -62,19 +62,19 @@ bind = SUPER, 9, workspace, 9
 bind = SUPER, 0, workspace, 10
 
 # Move active window to a workspace
-bind = SUPER SHIFT, 1, movetoworkspace, 1
-bind = SUPER SHIFT, 2, movetoworkspace, 2
-bind = SUPER SHIFT, 3, movetoworkspace, 3
-bind = SUPER SHIFT, 4, movetoworkspace, 4
-bind = SUPER SHIFT, 5, movetoworkspace, 5
-bind = SUPER SHIFT, 6, movetoworkspace, 6
-bind = SUPER SHIFT, 7, movetoworkspace, 7
-bind = SUPER SHIFT, 8, movetoworkspace, 8
-bind = SUPER SHIFT, 9, movetoworkspace, 9
-bind = SUPER SHIFT, 0, movetoworkspace, 10
+bind = SUPER CTRL, 1, movetoworkspacesilent, 1
+bind = SUPER CTRL, 2, movetoworkspacesilent, 2
+bind = SUPER CTRL, 3, movetoworkspacesilent, 3
+bind = SUPER CTRL, 4, movetoworkspacesilent, 4
+bind = SUPER CTRL, 5, movetoworkspacesilent, 5
+bind = SUPER CTRL, 6, movetoworkspacesilent, 6
+bind = SUPER CTRL, 7, movetoworkspacesilent, 7
+bind = SUPER CTRL, 8, movetoworkspacesilent, 8
+bind = SUPER CTRL, 9, movetoworkspacesilent, 9
+bind = SUPER CTRL, 0, movetoworkspacesilent, 10
 
 # Special workspace
-bind = SUPER SHIFT, s, movetoworkspace, special
+bind = SUPER CTRL, s, movetoworkspace, special
 bind = SUPER, S, togglespecialworkspace
 bind = , Menu, togglespecialworkspace
 
