--- a/hyprland/.config/hypr/keybinds.conf
+++ b/hyprland/.config/hypr/keybinds.conf
@@ -9,11 +9,11 @@ bind = SUPER, T, exec, $TERM
 bind = SUPER, E, exec, $FILE_EXPLORER
 bind = SUPER, B, exec, $BROWSER
 bind = SUPER, SPACE, exec, $LAUNCHER
-bind = SUPER CTRL, Tab, exec, rofi -show window
+bind = SUPER SHIFT, Tab, exec, rofi -show window
 bind = , Print, exec, $SCREENSHOT
 
 # Exit hyprland
-bind = SUPER SHIFT, Escape, exit
+bind = SUPER CTRL, Escape, exit
 
 # Tiling
 bind = SUPER, V, togglefloating,
@@ -25,14 +25,14 @@ bind = SUPER, M, fullscreen, 1
 bind = SUPER SHIFT, F, fakefullscreen
 
 # Move window
-bind = SUPER CTRL, h, movewindow, l
-bind = SUPER CTRL, l, movewindow, r
-bind = SUPER CTRL, k, movewindow, u
-bind = SUPER CTRL, j, movewindow, d
+bind = SUPER SHIFT, h, movewindow, l
+bind = SUPER SHIFT, l, movewindow, r
+bind = SUPER SHIFT, k, movewindow, u
+bind = SUPER SHIFT, j, movewindow, d
 
 # Move window/focus to next monitor
 bind = SUPER, o, focusmonitor, +1
-bind = SUPER CTRL, o, movewindow, mon:+1
+bind = SUPER SHIFT, o, movewindow, mon:+1
 
 # Move window focus
 bind = SUPER, h, movefocus, l
@@ -44,10 +44,10 @@ bind = SUPER, plus, cyclenext
 bind = SUPER, minus, cyclenext, prev
 
 # Resize active window
-bind = SUPER SHIFT, h, resizeactive, -64 0
-bind = SUPER SHIFT, l, resizeactive,  64 0
-bind = SUPER SHIFT, k, resizeactive,  0 -64
-bind = SUPER SHIFT, j, resizeactive,  0 64
+bind = SUPER CTRL, h, resizeactive, -64 0
+bind = SUPER CTRL, l, resizeactive,  64 0
+bind = SUPER CTRL, k, resizeactive,  0 -64
+bind = SUPER CTRL, j, resizeactive,  0 64
 
 # Switch workspaces
 bind = SUPER, 1, workspace, 1
@@ -62,16 +62,16 @@ bind = SUPER, 9, workspace, 9
 bind = SUPER, 0, workspace, 10
 
 # Move active window to a workspace
-bind = SUPER CTRL, 1, movetoworkspacesilent, 1
-bind = SUPER CTRL, 2, movetoworkspacesilent, 2
-bind = SUPER CTRL, 3, movetoworkspacesilent, 3
-bind = SUPER CTRL, 4, movetoworkspacesilent, 4
-bind = SUPER CTRL, 5, movetoworkspacesilent, 5
-bind = SUPER CTRL, 6, movetoworkspacesilent, 6
-bind = SUPER CTRL, 7, movetoworkspacesilent, 7
-bind = SUPER CTRL, 8, movetoworkspacesilent, 8
-bind = SUPER CTRL, 9, movetoworkspacesilent, 9
-bind = SUPER CTRL, 0, movetoworkspacesilent, 10
+bind = SUPER SHIFT, 1, movetoworkspacesilent, 1
+bind = SUPER SHIFT, 2, movetoworkspacesilent, 2
+bind = SUPER SHIFT, 3, movetoworkspacesilent, 3
+bind = SUPER SHIFT, 4, movetoworkspacesilent, 4
+bind = SUPER SHIFT, 5, movetoworkspacesilent, 5
+bind = SUPER SHIFT, 6, movetoworkspacesilent, 6
+bind = SUPER SHIFT, 7, movetoworkspacesilent, 7
+bind = SUPER SHIFT, 8, movetoworkspacesilent, 8
+bind = SUPER SHIFT, 9, movetoworkspacesilent, 9
+bind = SUPER SHIFT, 0, movetoworkspacesilent, 10
 
 # Special workspace
 bind = SUPER CTRL, s, movetoworkspace, special
