Update hyprland keyboard config again again

--- a/hyprland/.config/hypr/keybinds.conf
+++ b/hyprland/.config/hypr/keybinds.conf
@@ -8,7 +8,7 @@ $SCREENSHOT = slurp | grim -g - $HOME/Pictures/Screenshots/$(date +'screenshot_%
 bind = SUPER, T, exec, $TERM
 bind = SUPER, E, exec, $FILE_EXPLORER
 bind = SUPER, B, exec, $BROWSER
-bind = SUPER, SPACE, exec, $LAUNCHER
+bind = SUPER, RETURN, exec, $LAUNCHER
 bind = SUPER SHIFT, Tab, exec, rofi -show window
 bind = , Print, exec, $SCREENSHOT
 
