Inhibit idling when active window is fullscreen

--- a/hyprland/.config/hypr/hyprland.conf
+++ b/hyprland/.config/hypr/hyprland.conf
@@ -27,6 +27,7 @@ input {
 windowrule = float,^(org.kde.polkit-kde-authentication-agent-1)$
 windowrulev2 = stayfocused, title:^()$,class:^(steam)$
 windowrulev2 = minsize 1 1, title:^()$,class:^(steam)$
+windowrulev2 = idleinhibit fullscreen,focus:1
 
 # Source other files
 source=~/.config/hypr/monitors.conf
