Update hyprland config

--- a/hyprland/.config/hypr/appearance.conf
+++ b/hyprland/.config/hypr/appearance.conf
@@ -18,10 +18,12 @@ general {
 decoration {
     rounding = 2
 
-    drop_shadow = no
-    shadow_range = 4
-    shadow_render_power = 3
-    col.shadow = $SHADOW
+    shadow {
+        enabled = true
+        range = 4
+        render_power = 3
+        color = $SHADOW
+    }
 }
 
 misc {
