--- a/hyprland/.config/hypr/hyprland.conf
+++ b/hyprland/.config/hypr/hyprland.conf
@@ -19,7 +19,7 @@ input {
     }
 
     sensitivity = 0
-    force_no_accel = true
+    accel_profile = flat
     repeat_delay = 240
     repeat_rate = 45
 }
