--- a/hyprland/.config/hypr/hyprland.conf
+++ b/hyprland/.config/hypr/hyprland.conf
@@ -2,7 +2,7 @@
 exec-once = dbus-update-activation-environment --systemd WAYLAND_DISPLAY XDG_CURRENT_DESKTOP
 exec-once = /usr/lib/polkit-kde-authentication-agent-1
 exec-once = waybar
-exec-once = hyprpaper
+exec-once = ~/.config/hypr/wallpaperscript
 exec-once = dunst
 exec-once = hypridle
 
