--- a/hyprland/.config/hypr/keybinds.conf
+++ b/hyprland/.config/hypr/keybinds.conf
@@ -24,10 +24,10 @@ bind = SUPER, F, fullscreen, 0
 bind = SUPER, M, fullscreen, 1
 
 # Move window
-bind = SUPER SHIFT, h, movewindow, l
-bind = SUPER SHIFT, l, movewindow, r
-bind = SUPER SHIFT, k, movewindow, u
-bind = SUPER SHIFT, j, movewindow, d
+binde = SUPER SHIFT, h, movewindow, l
+binde = SUPER SHIFT, l, movewindow, r
+binde = SUPER SHIFT, k, movewindow, u
+binde = SUPER SHIFT, j, movewindow, d
 
 # Move window/focus to next monitor
 bind = SUPER, o, focusmonitor, +1
@@ -43,10 +43,17 @@ bind = SUPER, plus, cyclenext
 bind = SUPER, minus, cyclenext, prev
 
 # Resize active window
-bind = SUPER CTRL, h, resizeactive, -64 0
-bind = SUPER CTRL, l, resizeactive,  64 0
-bind = SUPER CTRL, k, resizeactive,  0 -64
-bind = SUPER CTRL, j, resizeactive,  0 64
+binde = SUPER CTRL, h, resizeactive, -32 0
+binde = SUPER CTRL, l, resizeactive,  32 0
+binde = SUPER CTRL, k, resizeactive,  0 -32
+binde = SUPER CTRL, j, resizeactive,  0  32
+
+# Cycle layout orientation
+bind = SUPER CTRL, o, layoutmsg, orientationcycle left right center
+
+# Add/Remove master
+bind = SUPER CTRL, a, layoutmsg, addmaster
+bind = SUPER CTRL, r, layoutmsg, removemaster
 
 # Switch workspaces
 bind = SUPER, 1, workspace, 1
@@ -86,14 +93,14 @@ bindm = SUPER, mouse:272, movewindow
 bindm = SUPER, mouse:273, resizewindow
 
 # Volume controls
-bind = , XF86AudioLowerVolume, exec, pactl set-sink-volume @DEFAULT_SINK@ -5%
-bind = , XF86AudioRaiseVolume, exec, pactl set-sink-volume @DEFAULT_SINK@ +5%
+binde = , XF86AudioLowerVolume, exec, pactl set-sink-volume @DEFAULT_SINK@ -5%
+binde = , XF86AudioRaiseVolume, exec, pactl set-sink-volume @DEFAULT_SINK@ +5%
 bind = , XF86AudioMute, exec, pactl set-sink-mute @DEFAULT_SINK@ toggle
 bind = , XF86AudioMicMute, exec, pactl set-source-mute @DEFAULT_SOURCE@ toggle
 
 # Brightness controls
-bind = , XF86MonBrightnessUp, exec, brightnessctl -e -q s 10%+
-bind = , XF86MonBrightnessDown, exec, brightnessctl -e -q s 10%-
+binde = , XF86MonBrightnessUp, exec, brightnessctl -e -q s 10%+
+binde = , XF86MonBrightnessDown, exec, brightnessctl -e -q s 10%-
 
 # Media controls
 bind = , XF86AudioPause, exec, playerctl play-pause
