Hyprland: keyboard layout switching and tiling orientation config

--- a/hyprland/.config/hypr/hyprland.conf
+++ b/hyprland/.config/hypr/hyprland.conf
@@ -8,20 +8,25 @@ exec-once = hypridle
 
 # Input settings
 input {
-    kb_layout = us
-    kb_variant = altgr-intl
-    kb_options = caps:escape # Map capslock to escape
+    # US and Swedish keyboard layouts, switchable with alt+shift, caps lock is
+    # mapped to escape
+    kb_layout = us, se
+    kb_variant = altgr-intl,
+    kb_options = caps:escape,grp:alt_shift_toggle
 
     follow_mouse = 1
 
     touchpad {
-        natural_scroll = no
+        natural_scroll = yes
     }
 
-    sensitivity = 0
-    accel_profile = flat
     repeat_delay = 240
     repeat_rate = 45
+}
+
+master {
+    slave_count_for_center_master = 0
+    center_master_slaves_on_right = false
 }
 
 windowrule = float,^(org.kde.polkit-kde-authentication-agent-1)$
