Hyprland: Update config to work with v0.48.0

--- a/hyprland/.config/hypr/hyprland.conf
+++ b/hyprland/.config/hypr/hyprland.conf
@@ -29,10 +29,10 @@ master {
     center_master_slaves_on_right = false
 }
 
-windowrule = float,^(org.kde.polkit-kde-authentication-agent-1)$
-windowrulev2 = stayfocused, title:^()$,class:^(steam)$
-windowrulev2 = minsize 1 1, title:^()$,class:^(steam)$
-windowrulev2 = idleinhibit fullscreen,focus:1
+windowrule = float, class:^(org.kde.polkit-kde-authentication-agent-1)$
+windowrule = stayfocused, title:^()$,class:^(steam)$
+windowrule = minsize 1 1, title:^()$,class:^(steam)$
+windowrule = idleinhibit fullscreen,focus:1
 
 # Source other files
 source=~/.config/hypr/monitors.conf
